--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,51 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
+input {
+  height: 2rem;
+  padding: 5px;
+  margin: 5px 10px;
+  color: #999;
+  border-style: none;
+  border: 1px solid #e0d1d1;
+  border-radius: 5px;
+}
+
+.input-error {
+  border-color: rgba(255, 0, 0, 0.5);
+  box-shadow: rgba(255, 0, 0, 0.5) 2px 2px 5px ;
+}
+
+button {
+  height: 2rem;
+  padding: 10px;
+  margin: 5px 10px;
+  color: #3d3939;
+  border-style: none;
+  border-radius: 5% ;
+  box-shadow: #c1baba 2px 2px 5px;
+  font-weight: 400;
+}
+
+button:hover {
+  color: #e7e2e2;
+  background-color: #9b9797;
+  cursor: pointer; 
+}
+
+li {
+  margin-left: 1.5rem;
+}
+
+.form-field-error {
+  background-color: #f8f6f6;
+  padding: 10px;
+  margin: 10px;
+  color: red;
+  font-size: 10px;
+  border-radius: 10px;
+  max-width: 50%;
 }
